change on Oriental

--- a/data/json/monthlyEnergy_nameAsKey_0415.json
+++ b/data/json/monthlyEnergy_nameAsKey_0415.json
@@ -5852,7 +5852,7 @@
         ]
     }, 
     "Puebla": {
-        "function": "lab and classroom", 
+        "function": "lab", 
         "electric": [
             {
                 "consumption": 456924.0, 
