cambio en index y dataset

--- a/data/json/monthlyEnergy_nameAsKey_0415.json
+++ b/data/json/monthlyEnergy_nameAsKey_0415.json
@@ -9324,7 +9324,7 @@
               }
         ], 
         "latitude": 19.003611, 
-        "steam": [
+        "Eoli": [
             {
                 "consumption": 298420.09,
                 "month": "2016-01-01"
